--- a/bc_kernelSVMclassifier.ipynb
+++ b/bc_kernelSVMclassifier.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "bc_kernelSVMclassifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOiJbNhtNyowNN3L2jY74z/",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMG6PepuVLKi/ItM3LSHCBo"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mehtamishah/Breast-Cancer-Detection/blob/main/bc_kernelSVMclassifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -33,7 +22,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,13 +33,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "fef21b33-870c-4165-9842-e6e60e571579"
+        "outputId": "e6d41620-6acb-4da0-c1ab-c4147ac768fd"
       },
       "source": [
         "dataset = pd.read_csv('breastcancer.csv')\n",
         "dataset.head()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,14 +176,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "733d108a-57f9-4180-c349-9986c7dd9a6a"
+        "outputId": "29cff1c4-dedf-400c-d992-18ca6cf75526"
       },
       "source": [
         "X = dataset.iloc[:, 1:-1].to_numpy()\n",
         "y = dataset.iloc[:, -1].to_numpy()\n",
         "X[23:25, :]"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +209,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -230,7 +219,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hbXvzIDOkLXr",
-        "outputId": "e91658cf-33b8-46b7-8f52-eca089fdf2ee"
+        "outputId": "696b8819-94b0-42d8-f259-4cf01546145c"
       },
       "source": [
         "from sklearn.impute import SimpleImputer\n",
@@ -238,7 +227,7 @@
         "X_train = imputer.fit_transform(X_train)\n",
         "X_train[23:25,:]"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +255,7 @@
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -276,14 +265,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a70df5fc-eab0-4acf-b38e-5323657f62a8"
+        "outputId": "a47ca908-41b2-4c0b-ec05-6a14b0905362"
       },
       "source": [
         "from sklearn.svm import SVC\n",
         "classifier = SVC(kernel = 'rbf', random_state = 0)\n",
         "classifier.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -312,7 +301,7 @@
         "X_test = imputer.transform(X_test)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -323,7 +312,7 @@
       "source": [
         "y_pred = classifier.predict(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -333,16 +322,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "607a043a-c4f6-4a84-e0e1-bf87c725214a"
+        "outputId": "041b1a9a-4415-4c49-ba99-6e624039e925"
       },
       "source": [
         "#metric\n",
         "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
-        "print(cm)\n",
-        "accuracy_score(y_test, y_pred)"
+        "print(cm)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,18 +339,6 @@
             " [  3  60]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.96"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
         }
       ]
     },
@@ -373,12 +349,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff651af6-9e7b-4d24-c582-91bb1e493748"
+        "outputId": "b95bcffe-c95f-43d2-db71-77bae31b3c9d"
       },
       "source": [
         "roc_auc_score(y_test, y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,6 +367,122 @@
             "tags": []
           },
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "guTZV6D3AX5O",
+        "outputId": "dc5b2ed2-503b-4f04-e949-43a00e478d4a"
+      },
+      "source": [
+        "#Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+        "accuracy_score(y_test, y_pred)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.96"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pzco8mCJAX9a",
+        "outputId": "8c685ca3-c6b7-47b7-cbb4-86aa90b25fae"
+      },
+      "source": [
+        "#Sensitivity = TP / (TP + FN) ability to determine the patient cases (malignant tumors) correctly #Recall\n",
+        "60/(60+4)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9375"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "plplfV5tAYBe",
+        "outputId": "95373d9d-9efe-42a9-e877-9e8b278265c9"
+      },
+      "source": [
+        "#Specificity = TN / (TN + FP)  ability to determine the healthy cases (benign tumors) correctly\n",
+        "108/(108+3)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.972972972972973"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hQTLVr4sAYEx",
+        "outputId": "2c348d2f-5887-42f6-f48e-0fd35519d0af"
+      },
+      "source": [
+        "#Precision = TP / (TP + FP) the number of correct positive predictions made\n",
+        "60/(60+3)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9523809523809523"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
         }
       ]
     }
