--- a/bc_supportvectormachineclassifier.ipynb
+++ b/bc_supportvectormachineclassifier.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "bcancer_supportvectormachineclassifier.ipynb",
+      "name": "bc_supportvectormachineclassifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOSgh0OY01HlhNOp9H568yx",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPy8wx0do6ky1UUxBLHgK5S"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mehtamishah/Breast-Cancer-Detection/blob/main/bcancer_supportvectormachineclassifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -40,11 +29,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
+          "base_uri": "https://localhost:8080/"
         },
         "id": "5GnKZkmms7YI",
-        "outputId": "22b7b0f1-1008-4a83-8583-aa1fd1fdc374"
+        "outputId": "c2730bda-f56c-4651-dcad-8633fdb0f4f8"
       },
       "source": [
         "dataset = pd.read_csv('breastcancer.csv')\n",
@@ -187,7 +175,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b20e4f8-96b0-4afa-ef8b-f63d73f80464"
+        "outputId": "282aa596-bb2c-4763-fd12-76be7b52e341"
       },
       "source": [
         "X = dataset.iloc[:, 1:-1].to_numpy()\n",
@@ -230,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EkXNs6Tujl3g",
-        "outputId": "04bfd54e-7bbe-41c2-c957-06a949b6d8e6"
+        "outputId": "0cb2c1ff-c59c-4ee7-8bdb-033f62e7a9d7"
       },
       "source": [
         "from sklearn.impute import SimpleImputer\n",
@@ -276,7 +264,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1dacec85-8ecc-4524-8177-35abdc788274"
+        "outputId": "7391741b-180e-4b97-c28b-8a9055722102"
       },
       "source": [
         "from sklearn.svm import SVC\n",
@@ -333,14 +321,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yuegkftfup84",
-        "outputId": "886bdf8f-694e-4e5a-d638-6b5d7aaae943"
+        "outputId": "a56e9bc2-6d30-4b24-dcf8-85d6875c7e32"
       },
       "source": [
         "#metric\n",
         "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
-        "print(cm)\n",
-        "accuracy_score(y_test, y_pred)"
+        "print(cm)"
       ],
       "execution_count": null,
       "outputs": [
@@ -351,18 +338,6 @@
             " [  3  60]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.96"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
         }
       ]
     },
@@ -373,7 +348,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be84d8b7-9b96-4ccc-ab19-113bf4094a45"
+        "outputId": "6c56cc41-4566-4c74-e43b-acc02a220181"
       },
       "source": [
         "roc_auc_score(y_test, y_pred)"
@@ -391,6 +366,122 @@
             "tags": []
           },
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XnIRICn583LQ",
+        "outputId": "c31ba861-ecab-45d2-d187-4761a417bf70"
+      },
+      "source": [
+        "#Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+        "accuracy_score(y_test, y_pred)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.96"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7eY6krtk83Qj",
+        "outputId": "81482029-f577-4663-83d4-49c8ed14c485"
+      },
+      "source": [
+        "#Sensitivity = TP / (TP + FN) ability to determine the patient cases (malignant tumors) correctly #Recall\n",
+        "60/(60+4)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9375"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-QxIikd483Wa",
+        "outputId": "28262f41-08d5-4b1d-9a1c-202a7b3d3d43"
+      },
+      "source": [
+        "#Specificity = TN / (TN + FP)  ability to determine the healthy cases (benign tumors) correctly\n",
+        "108/(108+3)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.972972972972973"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PDwZTvrz83dT",
+        "outputId": "3c7b09a7-7472-4e69-af28-c6b033585df5"
+      },
+      "source": [
+        "#Precision = TP / (TP + FP) the number of correct positive predictions made\n",
+        "60/(60+3)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9523809523809523"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
         }
       ]
     }
