--- a/bc_randomforestclassifier.ipynb
+++ b/bc_randomforestclassifier.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "bc_randomforestclassification.ipynb",
+      "name": "bc_randomforestclassifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPDuL1Ein6aEwXDUvrzjTTS",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNzexTIzWWH+DOtXYKbxco+"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mehtamishah/Breast-Cancer-Detection/blob/main/bc_randomforestclassification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -41,10 +30,9 @@
       "metadata": {
         "id": "e14blTRXJ-V7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "06400067-8a1b-43aa-e343-400bfed4af7e"
+        "outputId": "b7e89ef6-b70a-400c-92c2-5f44313ebdaf"
       },
       "source": [
         "dataset = pd.read_csv('breastcancer.csv')\n",
@@ -187,7 +175,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "72427085-6c9d-4766-9a2d-d81c2570ab61"
+        "outputId": "9b5f1d3b-8bcc-4fea-edaa-e258966a1005"
       },
       "source": [
         "X = dataset.iloc[:, 1:-1].to_numpy()\n",
@@ -230,7 +218,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "09bf0017-6a60-4609-c6f9-cdcf55dc0212"
+        "outputId": "191c534c-9938-4900-9712-2880f0acf1cd"
       },
       "source": [
         "#Feature scaling is not required and wont help but can add\n",
@@ -263,7 +251,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e47f6b00-932f-4e6c-ee28-9266e007a8ff"
+        "outputId": "c95398fd-ebc0-41fd-e37d-3e9b0b766e0c"
       },
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -323,13 +311,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a07535c-8ca0-4d58-f645-2d37d8d4b349"
+        "outputId": "104feeaf-3ff2-49ae-e326-1d18d53db590"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
-        "print(cm)\n",
-        "accuracy_score(y_test, y_pred)"
+        "print(cm)"
       ],
       "execution_count": null,
       "outputs": [
@@ -340,18 +327,6 @@
             " [  3  60]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9657142857142857"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
         }
       ]
     },
@@ -362,7 +337,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19461535-5b27-48c7-c320-0e0a764412f6"
+        "outputId": "bc6bdc9c-c2c9-4dc2-d298-ba018bdc76ef"
       },
       "source": [
         "roc_auc_score(y_test, y_pred)"
@@ -380,6 +355,122 @@
             "tags": []
           },
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vjue4Cyc-k7U",
+        "outputId": "15318484-5a3e-4cb9-a4cb-9da63183ff24"
+      },
+      "source": [
+        "#Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+        "accuracy_score(y_test, y_pred)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9657142857142857"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G0ackjn_-k-f",
+        "outputId": "cb0f513a-9c43-4dfa-d0b5-8c5a4b98b740"
+      },
+      "source": [
+        "#Sensitivity = TP / (TP + FN) ability to determine the patient cases (malignant tumors) correctly #Recall\n",
+        "60/(60+3)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9523809523809523"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MBoM80Iy-lCI",
+        "outputId": "1ab52043-e5bf-4ee3-ce0e-a368803d2f69"
+      },
+      "source": [
+        "#Specificity = TN / (TN + FP)  ability to determine the healthy cases (benign tumors) correctly\n",
+        "109/(109+3)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9732142857142857"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s8PaJRDl-lFf",
+        "outputId": "9f9feb02-8daf-42eb-9c29-d4b7c761f477"
+      },
+      "source": [
+        "#Precision = TP / (TP + FP) the number of correct positive predictions made\n",
+        "60/(60+3)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9523809523809523"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
         }
       ]
     }
